# Desk

crates/apps/desk-x/: Cargo.toml
crates/apps/desk-x/public/: index.html
crates/apps/desk-x/src/: main.rs
crates/plugins/desk-firebase-auth/: Cargo.toml
crates/plugins/desk-firebase-auth/src/: lib.rs
